# classification-task

./: .gitignore  CITATION.cff  Documentation.txt  README.md  environment.yml  example.ipynb  generate-data.py  generate-predictions.py  generate_data.py  generate_predictions.py  newcode.py  plot-results.py  plot_results.py  predictions.csv  preds.csv  pyproject.toml  test.csv  test.sh  train.csv  x_test.csv  x_train.csv
.github/workflows/: sphinx.yml  test.yml
_build/: .buildinfo  about.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: about.doctree  environment.pickle  index.doctree
doc/: about.md  conf.py  index.md
reference/: compare-csv-files.py  predictions.csv  test.csv  train.csv
tests/: test_generate_data.py  test_generate_predictions.py
